# auth

./: .env.debug  Cargo.toml  README.md
configs/caddy/: development.Caddyfile
configs/compose/: debug.compose.yml  development.compose.yml
controller/rest/: Cargo.toml  Dockerfile
controller/rest/src/: api.rs  main.rs
controller/rest/src/models/: application.rs  application_grant.rs  grant.rs  grant_application.rs  mod.rs  user.rs  user_grant.rs
controller/rest/src/services/: mod.rs
controller/rest/src/services/auth/: login.rs
controller/rest/src/services/core/: hasher.rs  jwt.rs
controller/rest/src/services/manage/: mod.rs
controller/rest/src/services/manage/application/: create.rs  get.rs  list.rs  update.rs
controller/rest/src/services/manage/grant/: create.rs  get_by_application.rs  get_by_id.rs  mod.rs
controller/rest/src/services/manage/user/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify_grant.rs
controller/rest/src/util/: error.rs  grants.rs  mod.rs
data/: .gitignore  Cargo.toml
data/src/: lib.rs
data/src/dto/: application.rs  error.rs  grant.rs  mod.rs  user.rs  user_grant.rs
data/src/repository/: application.rs  error.rs  grant.rs  mod.rs  user.rs
data/src/util/: mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_init.rs
scripts/: fresh_db_and_seed.sh  run_debug.sh  run_dev.sh  testing_fresh_database.sh
scripts/db/: generate_entities.sh  prepare.sh  run_migrations.sh
seed/: Cargo.toml  Dockerfile
seed/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
web/: .gitignore  nx.json  package.json  tsconfig.base.json  tsconfig.json
web/libs/web-sys/: .gitignore  README.md  orval.config.mjs  package.json  tsconfig.lib.json
web/libs/web-sys/src/: auth.ts  manage.ts
