[package]
name = "seed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
data = { version = "0.1.0", path = "../data" }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
argon2 = { version = "0.5.3", features = ["password-hash"] }
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.9.2"
clap = { version = "4.5.53", features = ["derive", "env"] }
