[package]
name = "rest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.31"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["scalar", "chrono", "swagger-ui"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"
libbuildinfo = { git = "https://github.com/charliethomson/libbuildinfo" }
data = { version = "0.1.0", path = "../../data" }
chrono = { version = "0.4.42", features = ["serde"] }
liberror = { git = "https://github.com/charliethomson/liberror" }
argon2 = { version = "0.5.3", features = ["password-hash"] }
thiserror = "2.0.17"
valuable = { version = "0.1.1", features = ["derive"] }
tracing = { version = "0.1.41", features = ["valuable"] }
hmac = "0.12.1"
sha2 = "0.10.9"
jwt = "0.16.0"
anyhow = "1.0.100"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }

[build-dependencies]
libbuildinfo = { git = "https://github.com/charliethomson/libbuildinfo" }
